--- a/src/components/Burger/BurgerIngredients/BurgerIngredient.css
+++ b/src/components/Burger/BurgerIngredients/BurgerIngredient.css
@@ -29,7 +29,7 @@
     box-shadow: inset -2px -3px #c9c9c9;
 }
 
-.Seeds1:after {
+/*.Seeds1:after {
     content: "";
     width: 100%;
     height: 100%;
@@ -54,7 +54,7 @@
     transform: rotate(60deg);
     box-shadow: inset -1px -3px #c9c9c9;
   }
-
+*/
   .Seeds2 {
     width: 10%;
     height: 15%;
@@ -66,7 +66,7 @@
     transform: rotate(10deg);
     box-shadow: inset -3px 0 #c9c9c9;
   }
-  
+  /*
   .Seeds2:before {
     content: "";
     width: 100%;
@@ -79,7 +79,7 @@
     transform: rotate(90deg);
     box-shadow: inset 1px 3px #c9c9c9;
   }
-  
+  */
 
 .Meat {
     width: 80%;
