--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -3,5 +3,6 @@
 }
 .Toolbar nav{height:100%;}
 
-@media (max-width:768px) {.toolbar_navigation-items{display:none;}}
-@media (min-width:769px) {.toolbar_toggle-button{display:none;}.toolbar_logo{margin-left:0;}}
+@media (max-width:499px) {
+    .DesktopOnly {display:none;}
+}
