--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,4 +1,4 @@
 .Logo {
-   background-color:white;padding:8px;height:100%;box-sizing:border-box;
+   background-color:white;padding:8px;height:100%;box-sizing:border-box;text-align:center;
 }
 .Logo img {height:100%;}
